homeworks/homework_1/task_1/homework_1 - Перепелкин Владимир.txt
Welcome to Scala 2.12.10 (Java HotSpot(TM) 64-Bit Server VM, Java 1.8.0_411).
Type in expressions for evaluation. Or try :help.

scala> println("Hello Scala! This is Vladimir Perepelkin")
Hello Scala! This is Vladimir Perepelkin

scala> def hello(hello: String) = println(hello + " Scala! This is Vladimir Perepelkin")
hello: (hello: String)Unit

scala> val hellos = "Hello" :: "Hola" :: "Guten tag"
<console>:11: error: value :: is not a member of String
       val hellos = "Hello" :: "Hola" :: "Guten tag"
                                      ^

scala> val hellos = "Hello" :: "Hola" :: "Guten tag" :: Nil
hellos: List[String] = List(Hello, Hola, Guten tag)

scala> for (h <- hellos) hello(h)
Hello Scala! This is Vladimir Perepelkin
Hola Scala! This is Vladimir Perepelkin
Guten tag Scala! This is Vladimir Perepelkin

scala> def hello(hello: String, name: String) = println(hello + " Scala! This is " + name)
hello: (hello: String, name: String)Unit

scala> val names = "Vladimir Perepelkin" :: "Vladimir Perepelkin".reverse :: Nil
names: List[String] = List(Vladimir Perepelkin, niklepereP rimidalV)

scala> for (h <- hellos; n <- names) hello(h, n)
Hello Scala! This is Vladimir Perepelkin
Hello Scala! This is niklepereP rimidalV
Hola Scala! This is Vladimir Perepelkin
Hola Scala! This is niklepereP rimidalV
Guten tag Scala! This is Vladimir Perepelkin
Guten tag Scala! This is niklepereP rimidalV

scala>